--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -21,7 +21,7 @@
 
         % --- Universität / Fakultät
         {\large \LaTeX{} ist ein Textsatzsystem, das speziell für wissenschaftliche Arbeiten entwickelt wurde.
-        Auf den folgenden Seiten werden einige nützliche Tipps und Tricks vorgestellt, die die Arbeit mit \LaTeX{} vereinfachen sollen}
+        Auf den folgenden Seiten werden einige nützliche Tipps und Tricks vorgestellt, die die Arbeit mit \LaTeX{} vereinfachen sollen.}
 
         \vfill
 
