--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{color}              % Ermöglicht farbige Darstellung von Text und Elementen
 \usepackage{comment}            % große Textblöcke auskommentieren -> \begin{comment} ... \end{comment}
 \usepackage{siunitx}            % Einheiten -> \SI{wert}{\einheit}
+\usepackage{float}             % Positionierung von Gleitobjekten (Bilder, Tabellen) -> \begin{figure}[H]
 
 % Bilder / PDFs
 \usepackage{graphicx}           % Fügt Bilder (JPG, PNG, PDF) in LaTeX-Dokumente ein    -> \includegraphics[width=...]{bild.png}
