--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -50,6 +50,7 @@ Manchmal ist es gewünscht auf einer Seite keine Kopf- und/oder Fußzeile zu hab
 \end{itemize}
 
 \subsection{Erstellen des Inhaltsverzeichnisses (und weiterer Verzeichnisse)}
+\label{sec:inhaltsverzeichnis}
 Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} erstellt. Die Tiefe des Inhaltsverzeichnis kann mit dem Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} festgelegt werden. Dabei steht X für die \underbar{maximale Tiefe} des Inhaltsverzeichnisses und kann folgende Werte annehmen:
 
 \begin{itemize}
@@ -72,4 +73,6 @@ Darüber hinaus sind weitere Einstellungen mit den Paketen \textbf{tocloft}, \te
 \subsection{Einbinden von Kapiteln}
 Besonders bei langen und umfangreichen Dokumenten ist es sinnvoll, die einzelnen Kapitel in separaten Dateien zu erstellen und diese dann in das Hauptdokument einzubinden. Dies geschieht mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}}. Dabei ist darauf zu achten, dass der Pfad relativ zum Hauptdokument angegeben wird.
 Ich persönlich strukturiere meine LaTeX-Dateien in einem eigenen Ordner (kapitel) und binde sie in einer dafür vorgesehenen Datei (uebersicht.tex) ein, welche in der main.tex Datei eingefügt wird. Somit muss die main.tex Datei nach einmaliger Einrichtung nicht mehr verändert werden.
+
+Mehr zu dem Inkludieren von LaTeX-Dateien ist in Kapitel \ref{sec:einbinden_von_latex_dateien} zu finden.
 
