--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,8 @@
 \fancyhead[R]{\nouppercase{\leftmark}}                             % Kopfzeile: Kapitelname
 
 % Inhaltsverzeichnis
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{3}                            % Inhaltsverzeichnis bis zur Ebene 3 anzeigen
+\setcounter{secnumdepth}{3}                         % Nummerierung bis zur Ebene 3
 \tableofcontents
 \listoftables
 \listoffigures
