--- a/anlagen/tabellen/abstand_vertikal.tex
+++ b/anlagen/tabellen/abstand_vertikal.tex
@@ -13,6 +13,10 @@
         \texttt{\textbackslash vfill}             & Füllt den \textbf{gesamten verbleibenden Platz} mit Abstand           \\
         \midrule
         \texttt{\textbackslash newline}           & Erzwingt einen \textbf{Zeilenumbruch} und beginnt eine neue Zeile     \\
+        \texttt{\textbackslash par}               & Beginnt einen neuen (normalen) \textbf{Absatz}                        \\
+        \texttt{\textbackslash bigbreak}          & Erzwingt einen großen \textbf{Absatz}                                 \\
+        \texttt{\textbackslash medbreak}          & Erzwingt einen mittleren \textbf{Absatz}                              \\
+        \texttt{\textbackslash smallbreak}        & Erzwingt einen kleinen \textbf{Absatz}                                \\
         \texttt{\textbackslash newpage}           & Erzwingt einen \textbf{Seitenumbruch}                                 \\
         \texttt{\textbackslash clearpage}         & Erzwingt einen \textbf{Seitenumbruch} nach allen restlichen Gleitobj. \\
         \texttt{\textbackslash linebreak[prio]}   & Erzwingt einen \textbf{Zeilenumbruch} mit Priorität (1-4)             \\
