--- a/anlagen/tabellen/hierachie.tex
+++ b/anlagen/tabellen/hierachie.tex
@@ -1,16 +1,16 @@
 \begin{table}[H]
     \centering
-    \begin{tabular}{lp{7cm}l}
+    \begin{tabular}{lll}
         \toprule
-        \textbf{Befehl}                           & \textbf{Ebenen-Tiefe}                       & \textbf{Verfügbar in} \\
+        \textbf{Befehl}                           & \textbf{Ebenen-Tiefe}       & \textbf{Verfügbar in} \\
         \midrule
-        \texttt{\textbackslash part\{\}}          & Höchste Ebene                               & \texttt{report, book} \\
-        \texttt{\textbackslash chapter\{\}}       & Kapitel                                     & \texttt{report, book} \\
-        \texttt{\textbackslash section\{\}}       & Hauptabschnitt                              & Alle Dokumentklassen  \\
-        \texttt{\textbackslash subsection\{\}}    & Unterabschnitt                              & Alle Dokumentklassen  \\
-        \texttt{\textbackslash subsubsection\{\}} & Noch kleinere Ebene                         & Alle Dokumentklassen  \\
-        \texttt{\textbackslash paragraph\{\}}     & Absatz mit Überschrift (keine Nummerierung) & Alle Dokumentklassen  \\
-        \texttt{\textbackslash subparagraph\{\}}  & Noch kleiner, meist inline                  & Alle Dokumentklassen  \\
+        \texttt{\textbackslash part\{\}}          & Höchste Ebene               & \texttt{report, book} \\
+        \texttt{\textbackslash chapter\{\}}       & Kapitel                     & \texttt{report, book} \\
+        \texttt{\textbackslash section\{\}}       & Hauptabschnitt              & Alle Dokumentklassen  \\
+        \texttt{\textbackslash subsection\{\}}    & Unterabschnitt              & Alle Dokumentklassen  \\
+        \texttt{\textbackslash subsubsection\{\}} & geringer als Unterabschnitt & Alle Dokumentklassen  \\
+        \texttt{\textbackslash paragraph\{\}}     & Absatz mit Überschrift      & Alle Dokumentklassen  \\
+        \texttt{\textbackslash subparagraph\{\}}  & Noch kleiner (meist inline) & Alle Dokumentklassen  \\
         \bottomrule
     \end{tabular}
     \caption{Dokumentenhierarchie}
