--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -23,7 +23,7 @@ Alle Anweisungen davor dienen lediglich der Vorbereitung des Dokuments. Alle Anw
 
 \subsection{Einbinden / Erstellen des Deckblatts}
 In der Regel wird ein Deckblatt benötigt, welches Informationen wie den Titel, den Autor, das Datum und ein Logo enthält. Dieses kann entweder als PDF-Datei eingebunden, falls ein bereits erstelltes Deckblatt verwendet werden soll oder als neue LaTeX-Datei erstellt werden.
-Das einbinden einer PDF-Datei erfolgt mit dem Befehl \textbf{\texttt{\textbackslash includepdf\{Pfad/zur/Datei.pdf\}}}. Für diesen Befehl wird das Paket \textbf{pdfpages} benötigt.
+Das einbinden einer PDF-Datei erfolgt mit dem Befehl \textbf{\texttt{\textbackslash includepdf\{Pfad/zur/Datei.pdf\}}}. Für diesen Befehl wird das Paket \textbf{pdfpages} benötigt (siehe auch \ref{sec:einbinden_von_pdf_dateien}).
 Alternativ kann das Deckblatt auch als LaTeX-Datei eingebunden werden, indem der Inhalt des Deckblatts in eine neue Datei geschrieben und mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} eingebunden wird. Hilfreich ist die Funktion \textbf{\texttt{\textbackslash begin\{titlepage\}}} und \textbf{\texttt{\textbackslash end\{titlepage\}}} um zwischen diesen Befehlen das Deckblatt zu erstellen. In dem Ordner \textbf{kapitel} sind zwei Beispieldateien zu finden.
 
 \subsection{Anpassen der Kopf- und Fußzeilen}
