--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -108,7 +108,7 @@ Darüber hinaus kann \texttt{\textbackslash stretch\{X\}} als Argument an \textt
 Ein em ist die Breite des Großbuchstaben M in der aktuellen Schriftart und ein pt entspricht etwa 0.35 mm.
 
 \subsubsection{Zentrierung}
-In LaTeX können Texte und Objekte zentriert werden. Dafür gibt es die folgenden Befehle:
+In \LaTeX{} können Texte und Objekte zentriert werden. Dafür gibt es die folgenden Befehle:
 \begin{table}[H]
     \centering
     \begin{tabular}{lp{6cm}c}
