--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,9 @@
 \usepackage{subcaption}         % Ermöglicht mehrere Teilabbildungen mit Untertiteln
 \usepackage{pdfpages}           % Einfügen von PDF-Dokumenten -> \includepdf[pages={...}]{dokument.pdf}
 
+% Listen
+\usepackage{enumitem}           % Ermöglicht Anpassungen von Listen -> \begin{itemize}[label=...]
+
 % Tabellen
 \usepackage{hhline}             % Erlaubt doppelte und selektive Linien in Tabellen
 \usepackage{multirow}           % Erlaubt das Zusammenfassen mehrerer Zeilen in Tabellen
